--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="paper" id="paper2"></div>
     <div class="paper" id="paper3"></div>
     <div class="paper" id="paper4"></div>
+    <div class="paper" id="paper5"></div>
 
     <div class="copy">
 
