--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <h2>When</h2>
       <div class="text">
-        <div class="column2">The next representation will take place at the Agile 2011 Conference in Salt Lake City, USA.</div>
+        <div class="column2">The next showing will take place at the Agile 2011 Conference in Salt Lake City, USA.</div>
       </div>
       <h2>Come and see.</h2>
     </div>
