--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
       <h3>A Programming Performance</h3>
       <h2>What</h2>
       <div class="text">
+        <div class="across_colums">
+          <div class="quote">
+            "This session is to programming what <em>Waiting For Godot</em> is for the theatre, funny and magic."
+          </div>
+          <div class="source">
+            - anonymous comment at XP Days Benelux 2010.
+          </div>
+        </div>
+      </div>
+      <div class="text">
         <div class="column1"><em>The Kata in the Hat</em> is a celebration of the joy of programming, even in the face of absurdity.</div>
         <div class="column2">It aims to reconnect workaday programmers with the poetry inherent in their work.</div>
       </div>
