* Beefed up the page by adding some text * Fixed CSS to handle text across two columns, after text divided into two columns.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="copy">
 
-      <h1>The Kata<br>in the Hat</h1>
+      <h1>The Kata<br>In The Hat</h1>
       <h3>A Programming Performance</h3>
       <h2>What</h2>
       <div class="text">
@@ -32,19 +32,43 @@
         </div>
       </div>
       <div class="text">
-        <div class="column1"><em>The Kata in the Hat</em> is a celebration of the joy of programming, even in the face of absurdity.</div>
+        <div class="column1"><em>The Kata In The Hat</em> is a celebration of the joy of programming, even in the face of absurdity.</div>
         <div class="column2">It aims to reconnect workaday programmers with the poetry inherent in their work.</div>
       </div>
-      <h2>Who</h2>
       <div class="text">
-        <div class="column1">Emmanuel Gaillot</div>
-        <div class="column2">Jonathan Perret</div>
+        <div class="across_colums">
+          <em>The Kata In The Hat</em> was workshopped during Summer 2010 at the Paris Coding Dojo. It was publicly presented for the first time during the Agile Tour Series Conference in Bordeaux, France, October 7, 2010.
+        </div>
+        <div class="across_colums">
+          Emmanuel Gaillot was playing the role of EMMANUEL GAILLOT, and Jonathan Perret was playing the role of JONATHAN PERRET.
+        </div>
       </div>
-      <h2>When</h2>
+      <h2>Characters</h2>
       <div class="text">
-        <div class="column2">The next showing will take place at the Agile 2011 Conference in Salt Lake City, USA.</div>
+        <div class="column1">EMMANUEL GAILLOT -</div>
+        <div class="column2">Male, mid-30s (a tad older).  Short and sanguine.  The creative mind.</div>
       </div>
-      <h2>Come and see.</h2>
+      <div class="text">
+        <div class="column1">JONATHAN PERRET -</div>
+        <div class="column2">Male, mid-30s (slightly younger).  Tall and restrained.  The clever brain.</div>
+      </div>
+      <div class="text">
+        <div class="across_colums additional_notes">
+          (Note: JONATHAN and EMMANUEL, although fictional characters, clearly wink at real people with the same names. Or the opposite.)
+        </div>
+      </div>
+      
+      <h2>Settings</h2>
+      <div class="text">
+        <div class="across_colums">Thursday August 11, 2011, early afternoon. The Savoy Conference Room at the Grand America Hotel, <a href="http://program2011.agilealliance.org/event/6608fee1c063e88fcd013e5686d5c8b2">during the Agile 2011 Conference in Salt Lake City, USA.</a></div>
+      </div>
+      <div class="text">
+        <div class="across_colums">While definitely happening in the now, the performance deals with nostalgia of long passed days and wild futuristic iconoclasm. Hence, the set should be minimal. Maybe a table, maybe lots of cables, but not much more.</div>
+      </div>
+      <h2>And: Lights Up.</h2>
+      <div class="across_colums additional_notes">
+        If you want to know more about the KITH project, inquire about future performances, or just tell us how much you love us, <a href="mailto:contact@thekatainthehat.com">drop us a line.</a>
+      </div>
     </div>
   </body>
 </html>
