Updated next performance's time / location

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       
       <h2>Settings</h2>
       <div class="text">
-        <div class="across_colums">Some time, somewhere at <a href="http://www.palexpo.ch/">Palexpo</a> during <a href="http://soft-shake.ch/en/">the Soft-Shake 2011 conference</a>.</div>
+        <div class="across_colums">Oct. 21, 2011 - morning time. Somewhere at <a href="http://www.enseirb-matmeca.fr/">ENSEIRB-MATMECA</a> during <a href="http://agiletourbordeaux.okiwi.org/">the Agile Tour Bordeaux 2011 conference</a>.</div>
       </div>
       <div class="text">
         <div class="across_colums">While definitely happening in the now, the performance deals with nostalgia of long passed days and wild futuristic iconoclasm. Hence, the set should be minimal. Maybe a table, maybe lots of cables, but not much more.</div>
