Change le mail for contact
The previous mail for contact was on the not any more reserved domain.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
       <h2>And: Lights Up.</h2>
       <div class="across_colums additional_notes">
-        If you want to know more about the KITH project, inquire about future performances, or just tell us how much you love us, <a href="mailto:contact@thekatainthehat.com">drop us a line.</a>
+        If you want to know more about the KITH project, inquire about future performances, or just tell us how much you love us, <a href="mailto:contact@ut7.fr">drop us a line.</a>
       </div>
     </div>
   </body>
